# ezy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.osx  README.md
.clangd/index/: libs.m.DA943F64DC77B0DC.idx  main.c.2E5BAA79A7D14FB2.idx  sokol_app.h.937F9581E2196CF7.idx  sokol_gfx.h.9B98188521CD5B82.idx  sokol_glue.h.9BA893DBECBE33AE.idx
src/: game.c  game.h  libs.c  main.c  sokol.m
src/core/: application.c  audio.c  audio.h  core.h  fontsprite.c  fontsprite.h  libs.c  libs.m  renderer.h  resources.c  resources.h
src/core/opengl/: renderer.c  shader.glsl  shader.glsl.h
src/examples/: ex1_stars.c  ex1_stars.h  ex2_stars2.c  ex2_stars2.h  ex3_font.c  ex3_font.h
